scripts/iptables
# Firewall configuration written by system-config-firewall
# Manual customization of this file is not recommended.
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
# allow scala app
-A INPUT -p tcp -m tcp --dport 8009 -m comment --comment "Allow http for scala server" -j ACCEPT
-A OUTPUT -p tcp --sport 8009 -m state --state ESTABLISHED -j ACCEPT
# allow ssh from our private network only
-A INPUT -m state --state NEW -m tcp -p tcp --dport 22 -i eth0 -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
COMMIT
